# ARITH24

./: .gitignore  README.md  myDCscript.sh
16_bit/src/: flopoco.vhdl
16_bit/syn/1GHz/: run.scr
16_bit/syn/1GHz/reports/: area.hier.report  area.report  power.hier.report  power.report
16_bit/syn/500MHz/reports/: power.report  (+2 more)
16_bit_opt/src/: flopoco.vhdl
32_bit_opt/src/: flopoco.vhdl  sqrt_nr.vhd
64_bit/src/: flopoco.vhdl
64_bit_opt/src/: flopoco.vhdl
64_bit_opt/syn/500MHz/: run.scr
app/: CMakeLists.txt  polybench.csv  polybench_results.ipynb
app/src/: gen_FP_tb.cpp  gen_half_tb.cpp  gen_tb.cpp  half.hpp
rtl/: README.md  myDCscript.sh  sim.csv  sim.ipynb  syn.csv
rtl/16_bit/sim/: input.txt  output.txt  test.vhd  transcript
rtl/16_bit/sim_fast/: test.vhd
rtl/16_bit/src/: flopoco.vhdl  sqrt_nr.vhd
rtl/16_bit_opt/sim/: input.txt  output.txt  test.vhd  transcript
rtl/16_bit_opt/src/: flopoco.vhdl
rtl/32_bit/sim/: run_test.sh  test.vhd
rtl/32_bit/src/: flopoco.vhdl  sqrt_nr.vhd
rtl/32_bit_opt/sim/: test.vhd
rtl/32_bit_opt/src/: flopoco.vhdl  sqrt_nr.vhd
rtl/32_bit_opt/syn/: dc_synthesis.tcl
rtl/64_bit/sim/: run_test.sh  test.vhd
rtl/64_bit/src/: flopoco.vhdl  sqrt_nr.vhd
rtl/64_bit_opt/sim/: test.vhd
rtl/64_bit_opt/src/: flopoco.vhdl
rtl/PERCIVAL_32/src/: pau_sqrt.vhd
rtl/PERCIVAL_32/syn/: dc_synthesis.tcl
rtl/PERCIVAL_64/src/: pau_sqrt.vhd
rtl/PERCIVAL_64/syn/: dc_synthesis.tcl
rtl/ieee_float/16_bit/: output.vhdl  sqrt.vhdl
rtl/ieee_float/32_bit/: sqrt.vhdl
rtl/ieee_float/64_bit/: input.vhdl  output.vhdl  sqrt.vhdl
(+114 files in other folders)
